Pull up following revision(s) (requested by thorpej in ticket #809):

sys/dev/pci/cy82c693.c: revision 1.11

Make the cyhc lock a regular mutex rather than a spin mutex.  Simplify
some interaction with the lock by converting some open-coded test/panic
blocks to KASSERT()s that can be safely tested outside the lock perimeter.

PR port-alpha/58602